--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,7 @@ body {
 
 /* Header */
 .header {
-  padding-bottom: 40px;
+  padding-bottom: 60px;
 }
 
 .title_container {
@@ -64,9 +64,16 @@ body {
 /* Main */
 .main_container {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  gap: 40px;
+  justify-content: center;
+  gap: 80px;
+}
+
+.left_container,
+.right_container {
+  display: flex;
+  flex-direction: column;
+  gap: 80px;
 }
 
 .link {
